--- a/style/style.css
+++ b/style/style.css
@@ -1,7 +1,13 @@
 @charset "UTF-8";
 
+html, body {
+	height: 100%;
+	margin: 0; padding: 0;
+}
+
 body {
-	margin: 0;
+	display : table;
+	width: 100%;
 	font-family: 'Roboto', sans-serif;
 }
 
@@ -97,11 +103,11 @@ main {
 	.sectionHeader {
 		height: 160px;
 	}
-	
+
 	.texteTopHeader h1 {
 		font-size: 35px;
 	}
-	
+
 	.texteTopHeader p {
 		font-size: 13px;
 	}
@@ -149,10 +155,25 @@ main {
 	display: inline-block;
 }
 
+.movieList {
+	background-color: #E8EBED;
+	padding: 10px;
+	height: 20px;
+	line-height: 20px;
+	margin-bottom: 10px;
+	border-radius: 10px;
+}
+
+.movieListA {
+	text-decoration: none;
+	color: black;
+}
+
 footer {
+	display : table-row;
 	width: 100%;
-	height: 40px;
-	line-height: 40px;
+	height: 20px;
+	line-height: 20px;
 	background-color: #EDEDED;
 	text-align: center;
 }
